--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
 				</header>
 				<nav id="nav">
 					<ul>
-						<li><a href="#one" class="active">About</a></li>
-						<li><a href="#two">Past Projects</a></li>
-						<li><a href="#three">Other Stuff</a></li>
+						<li><a href="#about" class="active">About</a></li>
+						<li><a href="#projects">Past Projects</a></li>
+						<li><a href="https://www.ludazhao.com/blog">2 Minutes to Departure</a></li>
 					</ul>
 				</nav>
 				<footer>
 					<ul class="icons">
-						<li><a href="https://www.facebook.com/luda.zhao.3" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+						<li><a href="https://www.instagram.com/luda_zhao" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 						<li><a href="https://www.linkedin.com/in/ludazhao" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
 						<li><a href="https://github.com/ludazhao" class="icon fa-github"><span class="label">Github</span></a></li>
 					</ul>
@@ -38,9 +38,7 @@
 
 				<!-- Main -->
 					<div id="main">
-
-						<!-- One -->
-							<section id="one">
+							<section id="about">
 								<div class="container">
 									<header class="major">
 										<h2>	</h2>
@@ -48,78 +46,64 @@
 										</p>
 									</header>
 
-									<p>I'm currently work as a Software Engineer at <a href="https://www.sidewalklabs.com/">Sidewalk Labs</a>, building software to re-imagine holistic urban planning through <a href="https://hello.delve.sidewalklabs.com/">computational approaches</a>. I'm especially interested in using software and data mining to tackle <b>tough, interdisplinary problems</b> in a variety of real-world contexts. Some of the other past projects I've worked on ranges from <a href="#sherlocknet">computational art history research</a> to <a href="#poverty">geo-mapping poverty in rural Africa</a>.
+									<p>I'm a software engineer + builder currently based in New York City. I'm interested using software to tackle <b>tough, interdisplinary problems</b> in a variety of real-world contexts, especially in the <b>travel & urban tech space</b>. </p>
 
-									<p> In my spare time, I enjoy reading, beaches, All-you-can-eat KBBQ, and collecting subway maps. Traveling is also one of my passions, and I maintain a blog documenting some of my adventures(and misadventures) <a href="https://ludazhao.com/blog">here</a>.</p>
+									<p>Previously, I worked at <b><a href='https://www.sidewalklabs.com/'>Sidewalk Labs</a></b>, building software to re-imagine urban planning through computational approaches. I also did stints at <b><a href='#airbnb'>Airbnb</a></b> and <b><a href='http://cs231n.stanford.edu/2017/'>Stanford</a></b>, where I got to learn and build cool things with some great people. </p>
 
-									<p>Love to chat to anyone about interesting ideas, so drop me a line! Connect with me on <a href="https://www.linkedin.com/in/ludazhao">LinkedIn</a> or email me at luda AT cs.stanford.edu. I'm currently based in New York City.</p> 
+									<p> In my spare time, I maintain a blog, <b><a href="https://ludazhao.com/blog">2 Minutes to Departure</a></b>, where I write about travel, cities, and all things in between. I also enjoy reading, snowboarding, salsa dancing, and collecting subway maps. </p>
 
+									<p>Love to chat to anyone about interesting ideas over coffee or tea, so drop me a line <b><a href="https://www.linkedin.com/in/ludazhao">(Linkedin)</a></b>! </p>
 								</div>
 							</section>
 
-
-						<!-- Two -->
-							<section id="two">
+							<section id="projects">
 								<div class="container projects-container">
 									<h3>Past Projects</h3>
-									<p>Here are a random smattering of interesting past projects I've worked on before, in rough chronological order. </p>
+									<p>Here are a smattering of interesting past projects I've worked on before! </p>
 									<div class="features">
+										<article id="delve">
+											<a href="https://delve.sidewalklabs.com/" class="image"><img src="images/delve.jpg" alt="" /></a>
+											<div class="inner">
+												<h4>Delve by Sidewalk Labs</h4>
+                                                <p>I was a tech lead at Sidewalk Labs, the urban technology offshoot of Google. Delve is a generative design tool used by architects, urban planners, and real estate developer to discover, compare, and optimize prospective master plans. The product was used in over 30+ cities across 4 continents to generate, evaluate, and compare potential city district plans. I learned a lot about real estate development, TypeScript, and building eB2B businesses. </p>
+											</div>
+										</article>
+										<article id="airbnb">
+											<a href="https://www.airbnb.com/san-francisco-ca/things-to-do" class="image"><img src="images/airbnb.png" alt="" /></a>
+											<div class="inner">
+												<h4>Airbnb Things to Do</h4>
+                                                <p>I helped spun up the first version of the Airbnb Things to Do vertical, which aimed to provide Airbnb guests with relevant travel points of interests, sourced straight from local hosts + insiders. Iterated quickly and learned a ton about growth, SEO, user-generated content. Click on the pic to see an example of a live page (as of 2023) on the website! </p>
+											</div>
+										</article>
 										<article id="sherlocknet">
-											<a href="http://labs.bl.uk/British+Library+Labs+Competition" class="image"><img src="images/pic01.jpg" alt="" /></a>
+											<a href="http://labs.bl.uk/British+Library+Labs+Competition" class="image"><img src="images/sherlocknet.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>SherlockNet</h4>
-                                                <p>In collaboration with the British Library, we explored how we can apply Convolutional Neural Networks to aid art history research. We used transfer learning to provide over 20 million new tags to over 1 million book illustrations from the 1500s to the 20th century. We presented this project in London for the 2016 British Library Labs Competition and was thrilled to receive 1st place in the contest.</p>
+                                                <p>In collaboration with the British Library, we explored how we can apply Convolutional Neural Networks to aid art history research. Using transfer learning, we provided over new 20 million annotation tags to a dataset of over 1 million book illustrations from the 1500s to the 20th century, which allowed art historians and researcher to better search and categorize these illustrations. We presented this project in London for the 2016 British Library Labs Competition in front of ~300 researchers and got great feedback! </p>
 											</div>
 										</article>
 										<article id="oasis">
-											<a href="files/urban_oasis.pdf" class="image"><img src="images/pic03.jpg" alt="" /></a>
+											<a href="files/urban_oasis.pdf" class="image"><img src="images/project-oasis.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Project Urban Oasis</h4>
-												<p>Recent trends in urban design have focused on “re-humanizing” city centers by converting motor ways into pedestrian and bike-only roads. We used open-source GIS data to build road network models and applied graph network analysis to evaluate potential roads for pedestrian/bike conversions.</p>
-											</div>
-										</article>
-										<article id="poverty">
-											<a href="files/poverty_mapping.pdf" class="image"><img src="images/pic08.jpg" alt="" /></a>
-											<div class="inner">
-                                                <h4>OpenStreetMap Road Network Analysis for Poverty Mapping</h4>
-                                                <p>Objective poverty metrics are crucial for development, yet these data are lacking in many countries. We used publicly available OpenStreetMap data to calculate infrastructure robustness features, which are then used to predict key poverty measures for countries in sub-Saharan Africa.</p>
+												<p>We used open-source GIS data to build a road network model of San Francisco and applied graph network analysis to evaluate the traffic impact of potential pedestrian/bike conversions. What's the point? It's a quantitative case study on the impact of “re-humanizing” city centers by converting motor ways into pedestrian and bike-only roads. </p>
 											</div>
 										</article>
 										<article id="reversi">
-											<a href="beautiful-reversi.herokuapp.com" class="image"><img src="images/pic07.jpg" alt="" /></a>
+											<a href="https://github.com/ludazhao/beautiful-reversi" class="image"><img src="images/reversi.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Beautiful-Reversi</h4>
-												<p>A new rendition of a classic board game built on JS/HTML5, designed for simplicity. Supports single-play or multi-player over network modes.</p>
+												<h4>Beautiful Reversi</h4>
+												<p>A rendition of a classic board game I built in my spare time between classes, designed for simplicity. Supports single-play or multi-player over network modes.</p>
 											</div>
 										</article>
 									</div>
 								</div>
 							</section>
 
-							<section id="three">
-								<div class="container">
-									<h3>Other Stuff</h3>
-									<p>Here's some other interesting links/blurbs.</p>
-									<ul class="feature-icons">
-										<li class="fa-plane"><b>Travel Blog</b>
-											<p>
-												I semi-frequently update <a href="https://ludazhao.com/blog">my blog</a> with my travels/musings. Here's a map detailing <a href="https://drive.google.com/open?id=1BEbyXTLNwmroPmJxmFJaSOKDtm8&usp=sharing">where I've been</a>.
-											</p>
-										</li>
-										<li class="fa-map"><b>Map Collection</b>
-											<p>
-												I keep a collection of interesting, informational, and aethestically pleasing maps. I also like to create one from time to time. Go <a href=www.cartographicexpressions.com> here</a> to see what kind of maps I found interesting.
-											</p>
-										</li>
-									</ul>
-								</div>
-							</section>
-
-
 					<section id="footer">
 						<div class="container" id="footer-container">
 							<ul class="copyright">
-								<li>&copy; Luda Zhao 2020</li>
+								<li>&copy; Luda Zhao 2023</li>
                                 <li>Inspired by <a href="https://html5up.net/read-only">Read Only</a> by HTML5UP</li>
 							</ul>
 						</div>
@@ -132,7 +116,6 @@
 			<script src="assets/js/jquery.scrolly.min.js"></script>
 			<script src="assets/js/skel.min.js"></script>
 			<script src="assets/js/util.js"></script>
-			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 			<script src="assets/js/main.js"></script>
 	</body>
 </html>
