--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
 										</p>
 									</header>
 
-									<p>I'm a software engineer + builder currently based in New York City. I'm interested in using software to tackle <b>tough, interdisplinary problems</b> in a variety of real-world contexts, especially in the <b>travel & urban tech space</b>. </p>
+									<p>I'm a software engineer + builder currently based in New York City. I'm interested in using software to tackle <b>interdisplinary problems</b> in a variety of real-world contexts. </p>
 
-									<p>Previously, I worked at <b><a href='https://www.sidewalklabs.com/'>Sidewalk Labs</a></b>, building software to re-imagine urban planning through computational approaches. I also did stints at <b><a href='#airbnb'>Airbnb</a></b> and <b><a href='http://cs231n.stanford.edu/2017/'>Stanford</a></b>, where I got to build cool things with some great people. </p>
+									<p>I'm currently working at <b><a href="https://business.instagram.com/boost-instagram-posts">Instagram</a></b>, where I work on products for creators + small businesses. Previously, I worked at <b><a href='https://www.sidewalklabs.com/'>Sidewalk Labs</a></b>, building software to re-imagine urban planning through computational approaches. I also did stints at <b><a href='#airbnb'>Airbnb</a></b> and <b><a href='http://cs231n.stanford.edu/2017/'>Stanford</a></b>, where I got to build cool things with some great people. </p>
 
-									<p>In my spare time, I maintain a blog, <b><a href="https://ludazhao.com/blog">2 Minutes to Departure</a></b>, where I write about travel, cities, and all things in between. I also enjoy reading, snowboarding, chess, and collecting subway maps. </p>
+									<!-- <p>In my spare time, I maintain a blog, <b><a href="https://ludazhao.com/blog">2 Minutes to Departure</a></b>, where I write about travel, cities, and all things in between. I also enjoy reading, snowboarding, chess, and collecting subway maps. </p> -->
 
 									<p>Love to chat to anyone about interesting ideas over coffee or tea, so drop me a line <b><a href="https://www.linkedin.com/in/ludazhao">(Linkedin)</a></b>! </p>
 								</div>
@@ -101,7 +101,7 @@
 					<section id="footer">
 						<div class="container" id="footer-container">
 							<ul class="copyright">
-								<li>&copy; Luda Zhao 2023</li>
+								<li>&copy; Luda Zhao 2024</li>
                                 <li>Inspired by <a href="https://html5up.net/read-only">Read Only</a> by HTML5UP</li>
 							</ul>
 						</div>
